--- a/.github/workflows/azure-webapps-python.yml
+++ b/.github/workflows/azure-webapps-python.yml
@@ -8,9 +8,9 @@ on:
 env:
   BRANCH_NAME: ${{ github.event.pull_request.head.ref }}
   PR_NUMBER: ${{ github.event.pull_request.number }}
-  AZURE_WEBAPP_NAME: test-${{ github.event.pull_request.number }}
+  AZURE_WEBAPP_NAME: testsb-${{ github.event.pull_request.number }}
   AZURE_WEBAPP_PACKAGE_PATH: '.'
-  RESOURCE_GROUP: test-${{ github.event.pull_request.number }}
+  RESOURCE_GROUP: testsb-${{ github.event.pull_request.number }}
   PYTHON_VERSION: '3.11' # set this to the Python version to use
 permissions:
   contents: read
